Tweak toggler text

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 
 <body>
     <div>
-        <button id="showHideBtn">PANEL TOGGLER</button>
+        <button id="showHideBtn">Show/Hide Panel</button>
     </div>
 </body>
 
